
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_8__ TYPE_3__ ;
typedef struct TYPE_7__ TYPE_2__ ;
typedef struct TYPE_6__ TYPE_1__ ;


typedef int ut8 ;
struct TYPE_8__ {int operands_count; TYPE_1__* operands; } ;
struct TYPE_7__ {int bits; } ;
struct TYPE_6__ {int type; int* regs; int reg; } ;
typedef TYPE_2__ RAsm ;
typedef TYPE_3__ Opcode ;


 int OT_MEMORY ;

__attribute__((used)) static int opsldt(RAsm *a, ut8 *data, const Opcode *op) {
 int l = 0;
 switch (op->operands_count) {
 case 1:
  if ( a->bits == 64 ) {
   data[l++] = 0x48;
  }
  data[l++] = 0x0f;
  data[l++] = 0x00;
  if ( op->operands[0].type & OT_MEMORY ) {
   data[l++] = 0x00 | op->operands[0].regs[0];
  } else {
   data[l++] = 0xc0 | op->operands[0].reg;
  }
  break;
 default:
  return -1;
 }
 return l;
}
